--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,15 @@ button { /* text_config x*/
     padding: 10px;
     border-radius: 10px;
 }
+#githubrepo > button {
+  width:150px;
+  height:50px;
+  margin:2px;
+  background: rgb(46,51,58);
+} #githubrepo:active, #githubrepo.lit{
+  background: rgb(35,39,45);
+}
+
 #animalButtonArea > button {
     width:120px;
     height:35px;
